--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -3,12 +3,8 @@
         <h1 style="color: blue;">Register with My APP</h1>
     </div>
     <div>
-        <label for="firstName">First Name</label>
-        <input type="text" name="firstName" [(ngModel)]="firstName" required id="firstName" placeholder="Enter your first name">
-    </div>
-    <div>
-        <label for="lastName">Last Name</label>
-        <input type="text" name="lastName" [(ngModel)]="lastName" required id="lastName" placeholder="Enter your last name">
+        <label for="name">Name</label>
+        <input type="text" name="name" [(ngModel)]="name" required id="name" placeholder="Enter your name">
     </div>
     <div>
         <label for="email">Email address</label>
